Backend/deploy/k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gh-agent
  namespace: gh-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gh-agent
  template:
    metadata:
      labels:
        app: gh-agent
    spec:
      containers:
        - name: gh-agent
          image: localhost:30500/gh-agent:v1
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: "1"
              memory: 2Gi
              ephemeral-storage: 3Gi
          volumeMounts:
            - name: repo-storage
              mountPath: /app/Backend/repo
      volumes:
        - name: repo-storage
          emptyDir:
            sizeLimit: 2Gi
