Backend/deploy/k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gh-agent
  namespace: gh-agent
spec:
  ingressClassName: traefik
  rules:
    - host: gh-agent.nstsdc.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gh-agent
                port:
                  number: 80
